Correct padding around metadata editor

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -908,6 +908,9 @@ Metadata Editor
 
 #metadataEditorWrapper {
     height: 700px;
+    margin-left: 16px;
+    margin-right: 16px;
+    width: calc(100% - 32px);
     white-space: nowrap;
 }
 
