--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
@@ -22,7 +22,7 @@
                  rows="#{LoginForm.myBenutzer.tableSize}"
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
-        <p:column headerText="#{msgs.name}">
+        <p:column headerText="#{msgs.client}">
             <h:outputText value="#{item.name}"/>
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
