--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditDetails.xhtml
@@ -13,6 +13,7 @@
 
 <ui:composition
         xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:panelGrid columns="2" layout="grid">
@@ -102,6 +103,18 @@
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
+            <p:repeat var="generator" value="#{TemplateForm.task.generators}">
+                <div>
+                    <p:outputLabel for="generator">
+                        <h:outputFormat value="#{msgs.generator}">
+                            <f:param value="#{generator.label}"/>
+                        </h:outputFormat>
+                    </p:outputLabel>
+                    <p:selectBooleanCheckbox id="generator" value="generator.value" class="input">
+                        <p:ajax event="change" oncomplete="toggleSave()"/>
+                    </p:selectBooleanCheckbox>
+                </div>
+            </p:repeat>
         </p:row>
     </p:panelGrid>
 </ui:composition>
