moved password change at user edit to separate dialog and added change at ldap server

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
@@ -12,10 +12,9 @@
 -->
 
 <ui:composition
-        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:f="http://xmlns.jcp.org/jsf/core"
-        xmlns:p="http://primefaces.org/ui">
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:p="http://primefaces.org/ui">
 
     <h:form id="changePasswordForm">
         <p:panelGrid id="passwordGrid" columns="3" layout="grid">
@@ -27,7 +26,9 @@
                                 class="password"
                                 value="#{LoginForm.passwordChanged}"
                                 label="#{msgs.newPassword}"
-                                required="true"/>
+                                match="newPasswordRepeat"
+                                required="true"
+                                validatorMessage="#{msgs.passwordsDontMatch}"/>
                 </div>
 
                 <div>
@@ -37,9 +38,7 @@
                                 class="password"
                                 value="#{LoginForm.passwordChangedRepeat}"
                                 label="#{msgs.confirmNewPassword}"
-                                required="true"
-                                match="newPassword"
-                                validatorMessage="#{msgs.passwordsDontMatch}"/>
+                                required="true"/>
                 </div>
                 <div>
                     <p:commandButton id="absenden"
@@ -47,13 +46,11 @@
                                      action="#{LoginForm.saveChangedPassword}"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
-                                     validateClient="true">
-                        <f:ajax execute="@form" render="@form"/>
+                                     validateClient="true"
+                                     styleClass="button-filled-blue">
                     </p:commandButton>
                 </div>
             </p:row>
-            <p:row/>
-            <p:row/>
         </p:panelGrid>
     </h:form>
 </ui:composition>
