added pagination after creation of dummyImages

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -792,3 +792,7 @@ tr.ui-expanded-row-content .ui-panelgrid .ui-panelgrid-cell,
 .m-0 {
     margin: 0;
 }
+
+.alignTop {
+    vertical-align: top;
+}
