--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/structure.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/structure.xhtml
@@ -22,13 +22,13 @@
                 selection="#{Metadaten.selectedTreeNode}"
                 draggable="true" droppable="true" dragdropScope="DocStructTree">
             <p:ajax event="select" listener="#{Metadaten.onNodeSelect}"
-                    update="structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel"/>
+                    update="structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel,dialogEditPages"/>
             <p:ajax event="dragdrop" listener="#{Metadaten.onNodeDragDrop}"
-                    update="structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel"/>
+                    update="structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel,dialogEditPages"/>
             <p:treeNode expandedIcon="ui-icon-document" collapsedIcon="ui-icon-document">
                 <ui:param name="elementType" value="#{element.type.getNameByLanguage(SpracheForm.locale)}"/>
                 <h:outputText value="#{elementType}"/> <h:outputText
-                    value=" #{Metadaten.getPhysicalPageNumber(element)}" rendered="#{elementType eq msgs.page}"/>
+                    value=" #{Metadaten.getLogicalPageNumber(element)}" rendered="#{elementType eq msgs.page}"/>
             </p:treeNode>
         </p:tree>
     </p:panel>
