added update of tiff folder after generation of dummy pics

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
@@ -62,7 +62,7 @@
 
                         <p:commandButton id="generateDummyImagesButton" value="#{msgs.insert}"
                                          action="#{Metadaten.addNewImagesAndPaginate}"
-                                         update="structureTreeForm"
+                                         update="structureTreeForm,galleryWrapperPanel"
                                          immediate="true"/>
                     </h:panelGroup>
 
