fixed the disappearing of structur elements if droped on same place

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
@@ -108,7 +108,7 @@
                     </p:selectOneMenu>
 
                     <p:commandButton id="startPagination" action="#{Metadaten.changePagination}"
-                                     update="structureTreeForm:paginationSelection"
+                                     update="structureTreeForm:paginationSelection,structureTreeForm:structureWrapperPanel"
                                      value="start">
                     </p:commandButton>
 
